@@ -1,5 +1,6 @@
 Changes for 1.6.1
 
+ - [ZBX-484] fixed host-group selection in templates page (Artem)
  - [ZBX-464] fixed user creation under ldap (Artem)
  - [ZBX-468] fixed user online status in administration panel (Artem)
  - [ZBX-492] fixed wrong url "next 100" in audit actions (Artem)
